# Tetris

./: AssetManager.cpp  AssetManager.h  Button.cpp  Button.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  GameSound.cpp  GameSound.h  Game_Шаблон.rc  README.md  Tetramino.cpp  Tetramino.h  Tetris.rc  Tetris.sln  Tetris.vcxproj  Tetris.vcxproj.filters  main.cpp  resource.h  resource1.h
sound/: deadline.xmp  fon.pkf  game_over.xmp  movetetramino.xmp  svist.xmp
